--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "slimphp-kickstart",
-  "version": "1.0.1",
-  "description": "",
-  "homepage": "",
+  "name": "slim-kickstarter",
+  "version": "1.0.0",
+  "description": " A kickstarter for rapidly developing a SlimPHP application or website.",
+  "main": "",
+  "repository": "",
   "author": "Henning Stein <stein@atomtigerzoo.com>",
-  "license": "None",
-  "private": true,
+  "license": "MIT",
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.0",
-    "browser-sync": "^2.18.8",
-    "del": "^2.2.2",
-    "gulp": "~3.9",
+    "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.18.12",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0",
+    "gulp-clean-css": "^3.7.0",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
-    "gulp-connect-php": "0.0.8",
+    "gulp-connect-php": "^1.0.1",
     "gulp-debug": "^3.1.0",
     "gulp-filter": "^5.0.0",
-    "gulp-header": "^1.8.8",
-    "gulp-imagemin": "^3.2.0",
+    "gulp-header": "^1.8.9",
+    "gulp-imagemin": "^3.3.0",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-clean-css": "^3.0.4",
     "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
+    "gulp-replace": "^0.6.1",
     "gulp-rev": "^7.1.2",
     "gulp-sass": "^3.1.0",
     "gulp-shell": "^0.6.3",
-    "gulp-sourcemaps": "^2.5.0",
-    "gulp-uglify": "^2.1.2",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-usemin": "^0.3.28",
-    "imagemin-pngquant": "^5.0",
+    "imagemin-pngquant": "^5.0.1",
     "vinyl-paths": "^2.1.0"
   }
 }
